<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fondoPantalla"
    android:padding="10px">

    <TextView
        android:id="@+id/txt_introduceDni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/introduceDni"/>

    <LinearLayout
        android:id="@+id/lyt_introduceDni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_introduceDni">

        <EditText
            android:id="@+id/numDni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:hint="@string/numDni"
            android:inputType="number"
            android:maxLength="8"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="-"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/letraDni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/letraDni"
            android:inputType="textCapCharacters"
            android:maxLength="1"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lyt_introduceDni"
        android:layout_centerHorizontal="true"
        android:text="@string/validarDni"
        android:onClick="validarDni"/>
</RelativeLayout>